@@ -1,5 +1,8 @@
 2001-12-20  Dieter Baron  <dillo@danbala.tuwien.ac.at>
 
+	* ftp.c (_ftp_update_transfer): display time stalled in m:s when
+	more than 59 seconds.  Don't display total size if unknown.
+
 	* sftp.c: rewrite without stdio.
 	
 	* sftp.c (_sftp_start_ssh) send status packet in case of error.
